polish: professional hardening and documentation update
- Removed self-referential 'Staff-level' phrases.
- Fixed code formatting in core classes for high readability.
- Hardened InferenceExecutor with per-model concurrency limits (backpressure) and robust stage cancellation.
- Integrated Java 21 Structured Concurrency (StructuredTaskScope) properly for Stage and Batch management.
- Added detailed benchmark report under docs/benchmarks/ with honest relative improvement metrics.
- Overhauled README with Architecture Diagram (Mermaid), Design Tradeoffs, Decision Framework, and Known Limitations.
- Added DeadlineStressExample as a polished resiliency demo.